--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.6.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
-    "less": "^4.1.2"
+    "less": "^4.1.2",
+    "webpack": "^5.72.1"
   }
 }
